tests/suite/fail/generated/types/fail_assign_i32_to_string_5.ny
fn main() {
    let x: string = 1 //~ ERROR Type mismatch
    print(0)
}
